--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@ window.addEventListener("load",function(){
 <div class="news-item">
 <p>
 Aurora QSO with 20SD110 Kare in Norway on 11.11.2010<br />
-<a href="http://www.ustream.tv/recorded/10783507" target="_blank">http://www.ustream.tv/recorded/10783507</a>
+<a href="http://www.ustream.tv/recorded/10783507" target="_blank" rel="noopener">http://www.ustream.tv/recorded/10783507</a>
 </p>
 </div>
 
 <div class="news-item">
 <p>
-I participated in the <a href="http://www.alfatango.org/cms/index.php/at-contest/263-woman-s-day-contest" target="_blank">AT Woman's Day Contest 2014</a>, video by 14FAT133 on 8.3.2014<br>
-<a href="http://www.youtube.com/watch?v=xcrPMlTOLTo" target="_blank">http://www.youtube.com/watch?v=xcrPMlTOLTo</a>
+I participated in the <a href="http://www.alfatango.org/cms/index.php/at-contest/263-woman-s-day-contest" target="_blank" rel="noopener">AT Woman's Day Contest 2014</a>, video by 14FAT133 on 8.3.2014<br>
+<a href="http://www.youtube.com/watch?v=xcrPMlTOLTo" target="_blank" rel="noopener">http://www.youtube.com/watch?v=xcrPMlTOLTo</a>
 </p>
 </div>
 
 <section class="banners">
 <div class="fl-banner">
-<p><a href="http://fldx.org" target="_blank"><img src="images/banners/fl_banner.jpg" alt="Finnish International
+<p><a href="http://fldx.org" target="_blank" rel="noopener"><img src="images/banners/fl_banner.jpg" alt="Finnish International
 DX Group Foxtrot Lima" style="border: 0px;"></a></p>
 </div>
 
 <div class="qrz11search">
-<form method="get" action="//www.qrz11.com/show_prof.php" target="_blank">
+<form method="get" action="//www.qrz11.com/show_prof.php" target="_blank" rel="noopener">
 <table role="presentation">
-<tr><td><a href="http://www.qrz11.com" target="_blank"><img alt="QRZ11.com" src="images/banners/half-banner-qrz11.gif"></a></td></tr>
+<tr><td><a href="http://www.qrz11.com" target="_blank" rel="noopener"><img alt="QRZ11.com" src="images/banners/half-banner-qrz11.gif"></a></td></tr>
 <tr><td><label for="call"><span class="sr-only">Search qrz11.com for </span>Callsign:</label> <input type="text" name="callsign" id="call" size="8"> <input type="submit" value="Search"></td></tr>
 </table>
 </form>
@@ -49,5 +49,5 @@ DX Group Foxtrot Lima" style="border: 0px;"></a></p>
 
 <!-- Foxtrot Lima clusterspots.php -->
 <p>
-<a href="http://fldx.org/site/clusterspots.php" target="_blank">Latest spots from most of the 11m clusters</a>
+<a href="http://fldx.org/site/clusterspots.php" target="_blank" rel="noopener">Latest spots from most of the 11m clusters</a>
 </p>
