--- a/kristiina-2010.html
+++ b/kristiina-2010.html
@@ -22,7 +22,7 @@ I was active from Kristiinankaupunki (or Kristinestad in Swedish) on my summer h
     <div class="of-container">
       <a href="images/kristinestad_2010/11m-slimjim-antenna.jpg"><img src="images/kristinestad_2010/11m-slimjim-antenna-preview.jpg" alt="Slim Jim wire antenna"></a>
       <div class="caption">
-        The antenna I used (homemade <a href="http://www.hamuniverse.com/slimjim.html" target="_blank">Slim Jim</a> made from wire and plastic spacers for 11 meters)
+        The antenna I used (homemade <a href="http://www.hamuniverse.com/slimjim.html" target="_blank" rel="noopener">Slim Jim</a> made from wire and plastic spacers for 11 meters)
       </div>
     </div>
 </div>
@@ -115,6 +115,6 @@ Stations worked while in Kristiinankaupunki (15.06-20.06.2010)<br>
 </p>
 
 <p>
-For info about Kristiinankaupunki (Kristinestad) go to <a href="http://www.kristinestad.fi/" target="_blank">http://www.kristinestad.fi/</a> and choose &ldquo;In English&rdquo; from the language
+For info about Kristiinankaupunki (Kristinestad) go to <a href="http://www.kristinestad.fi/" target="_blank" rel="noopener">http://www.kristinestad.fi/</a> and choose &ldquo;In English&rdquo; from the language
 menu.
 </p>
