--- a/links.html
+++ b/links.html
@@ -8,19 +8,19 @@ title: Links to Some Other Radio Related Sites
 {% comment %}
 <!--
 <p class="c">
-<a href="http://www.qsl11.com" target="_blank"><img src="images/qsl_b2.gif" width="468" height="60" alt="QSL11.com - 11m E-QSL exchange" border="0" /></a><br>
+<a href="http://www.qsl11.com" target="_blank" rel="noopener"><img src="images/qsl_b2.gif" width="468" height="60" alt="QSL11.com - 11m E-QSL exchange" border="0" /></a><br>
 </p>
 -->{% endcomment %}
 <p>
-<a href="http://fldx.org" target="_blank"><img src="/images/banners/fl_banner.jpg" style="border: 0px;" alt="Finnish International
+<a href="http://fldx.org" target="_blank" rel="noopener"><img src="/images/banners/fl_banner.jpg" style="border: 0px;" alt="Finnish International
 DX Group Foxtrot Lima" /></a>
 </p>
 
 <ul class="links">
-<li><a href="http://www.alfatango.org" target="_blank">http://www.alfatango.org</a></li>
-<li><a href="http://www.cluster.dk" target="_blank">http://www.cluster.dk</a></li>
-<li><a href="http://www.sugar-delta.org" target="_blank">http://www.sugar-delta.org</a></li>
-{% comment %}<!-- <a href="http://www.emudx.com" target="_blank">http://www.emudx.com</a> -->{% endcomment %}
+<li><a href="http://www.alfatango.org" target="_blank" rel="noopener">http://www.alfatango.org</a></li>
+<li><a href="http://www.cluster.dk" target="_blank" rel="noopener">http://www.cluster.dk</a></li>
+<li><a href="http://www.sugar-delta.org" target="_blank" rel="noopener">http://www.sugar-delta.org</a></li>
+{% comment %}<!-- <a href="http://www.emudx.com" target="_blank" rel="noopener">http://www.emudx.com</a> -->{% endcomment %}
 </ul>
 
 {% comment %}
@@ -29,47 +29,47 @@ DX Group Foxtrot Lima" /></a>
 
 <p>
 11m logbook programs<br>
-<a href="http://logger32.free.fr/" target="_blank">Logger 32 for 11 meter</a>
+<a href="http://logger32.free.fr/" target="_blank" rel="noopener">Logger 32 for 11 meter</a>
 </p>
 -->{% endcomment %}
 <h2>Some Technical Links</h2>
 
 <p>
 -K0BG's website for mobile radio amateurs (info on mobile installations, good read also for 11m operators)<br>
-<a href="http://k0bg.com/" target="_blank">http://k0bg.com/</a>
+<a href="http://k0bg.com/" target="_blank" rel="noopener">http://k0bg.com/</a>
 <br>
 <br>
 -Microphone wiring info for ham radios on G4WPW's site<br>
-<a href="https://web.archive.org/web/20160603012336/http://homepage.ntlworld.com/rg4wpw/date.html" target="_blank">http://homepage.ntlworld.com/rg4wpw/date.html</a>
+<a href="https://web.archive.org/web/20160603012336/http://homepage.ntlworld.com/rg4wpw/date.html" target="_blank" rel="noopener">http://homepage.ntlworld.com/rg4wpw/date.html</a>
 <br>
 <br>
 Understanding 10 meter (also 11 meter) Sporadic E<br>
-<a href="http://www.chem.hawaii.edu/uham/spore.html" target="_blank">http://www.chem.hawaii.edu/uham/spore.html</a>
+<a href="http://www.chem.hawaii.edu/uham/spore.html" target="_blank" rel="noopener">http://www.chem.hawaii.edu/uham/spore.html</a>
 <br>
 <br>
 
 {% comment %}
 <!--
 -Radio &amp; electronics school<br>
-<a href="http://www.radioelectronicschool.com" target="_blank">http://www.radioelectronicschool.com</a>
+<a href="http://www.radioelectronicschool.com" target="_blank" rel="noopener">http://www.radioelectronicschool.com</a>
 <br>
 <br>
 -->
 <!--
 -Radio notebook by 43AX101, Ben<br>
-<a href="http://www.geocities.com/cq43ax101/Radio_Notebook.html" target="_blank">http://www.geocities.com/cq43ax101/Radio_Notebook.html</a>
+<a href="http://www.geocities.com/cq43ax101/Radio_Notebook.html" target="_blank" rel="noopener">http://www.geocities.com/cq43ax101/Radio_Notebook.html</a>
 <br>
 <br>
 -->
 {% endcomment %}
 -11 meter antennas on WWW<br>
-<a href="http://fldx.org/site/11m-antennas-on-internet.php" target="_blank">http://fldx.org/site/11m-antennas-on-internet.php</a>
+<a href="http://fldx.org/site/11m-antennas-on-internet.php" target="_blank" rel="noopener">http://fldx.org/site/11m-antennas-on-internet.php</a>
 {% comment %}
 <!--
 <br>
 <br>
 -"Twenty seven-eleven"<br>
-<a href="http://www.grommet.freeserve.co.uk/27-11/27-11.html" target="_blank">http://www.grommet.freeserve.co.uk/27-11/27-11.html</a>
+<a href="http://www.grommet.freeserve.co.uk/27-11/27-11.html" target="_blank" rel="noopener">http://www.grommet.freeserve.co.uk/27-11/27-11.html</a>
 -->
 {% endcomment %}
 </p>
@@ -77,33 +77,33 @@ Understanding 10 meter (also 11 meter) Sporadic E<br>
 <h2>Modifications, manuals, schematics etc.</h2>
 
 <ul class="links">
-<li><a href="http://members.tripod.com/~Malzev/" target="_blank">http://members.tripod.com/~Malzev/</a></li>
-<li><a href="http://service.alan-electronics.de/main.htm" target="_blank">http://service.alan-electronics.de/main.htm</a></li>
-<li><a href="http://www.cbtricks.com" target="_blank">http://www.cbtricks.com</a></li>
-{% comment %}<li><a href="http://www.cbradio.cz/doc/" target="_blank">http://www.cbradio.cz/doc/</a></li>{% endcomment %}
-<li><a href="http://www.cqham.ru/sch_eng.html" target="_blank">http://www.cqham.ru/sch_eng.html</a></li>
+<li><a href="http://members.tripod.com/~Malzev/" target="_blank" rel="noopener">http://members.tripod.com/~Malzev/</a></li>
+<li><a href="http://service.alan-electronics.de/main.htm" target="_blank" rel="noopener">http://service.alan-electronics.de/main.htm</a></li>
+<li><a href="http://www.cbtricks.com" target="_blank" rel="noopener">http://www.cbtricks.com</a></li>
+{% comment %}<li><a href="http://www.cbradio.cz/doc/" target="_blank" rel="noopener">http://www.cbradio.cz/doc/</a></li>{% endcomment %}
+<li><a href="http://www.cqham.ru/sch_eng.html" target="_blank" rel="noopener">http://www.cqham.ru/sch_eng.html</a></li>
 {% comment %}<!--
-<li><a href="http://www.geocities.com/linearschematics/" target="_blank">CB and Linear Schematics</a></li>
+<li><a href="http://www.geocities.com/linearschematics/" target="_blank" rel="noopener">CB and Linear Schematics</a></li>
 -->{% endcomment %}
-{% comment %}<li><a href="http://www.kb2ljj.com" target="_blank">http://www.kb2ljj.com</a></li>{% endcomment %}
-<li><a href="http://www.mods.dk" target="_blank">http://www.mods.dk</a></li>
-<li><a href="http://www.radiomods.co.nz/" target="_blank">http://www.radiomods.co.nz/</a></li>
-<li><a href="http://www.servicedocs.com/" target="_blank">http://www.servicedocs.com/</a></li>
-<li><a href="http://www.thiecom.de/ftp/" target="_blank">http://www.thiecom.de/ftp/</a></li>
+{% comment %}<li><a href="http://www.kb2ljj.com" target="_blank" rel="noopener">http://www.kb2ljj.com</a></li>{% endcomment %}
+<li><a href="http://www.mods.dk" target="_blank" rel="noopener">http://www.mods.dk</a></li>
+<li><a href="http://www.radiomods.co.nz/" target="_blank" rel="noopener">http://www.radiomods.co.nz/</a></li>
+<li><a href="http://www.servicedocs.com/" target="_blank" rel="noopener">http://www.servicedocs.com/</a></li>
+<li><a href="http://www.thiecom.de/ftp/" target="_blank" rel="noopener">http://www.thiecom.de/ftp/</a></li>
 </ul>
 
 {% comment %}<!--
 <p class="c">
 Antenna manufacturers<br>
 <br>
-<a href="http://www.hpsd.nl/ target="_blank">http://www.hpsd.nl/</a><br>
+<a href="http://www.hpsd.nl/ target="_blank" rel="noopener">http://www.hpsd.nl/</a><br>
 </p>
 -->{% endcomment %}
 <h2>Software</h2>
 
 <p>
 Electronics Assistant is a Windows program that performs electronics-related calculations.<br>
-<a href="http://www.electronics2000.co.uk/download.php" target="_blank">http://www.electronics2000.co.uk/download.php</a>
+<a href="http://www.electronics2000.co.uk/download.php" target="_blank" rel="noopener">http://www.electronics2000.co.uk/download.php</a>
 </p>
 
 <p>
