--- a/vaasa.html
+++ b/vaasa.html
@@ -86,7 +86,7 @@ as their mother tongue, 22% speak Swedish and 7% speak other languages.
 
 <div class="image center" style="max-width: 500px;">
  <img src="images/vaasa/vaasa-flags.jpg" alt="City of Vaasa">
- <div class="caption center"><a href="http://www.fmi.fi/weather/local.html?kunta=Vaasa" target="_blank">Current weather at Vaasa</a></div>
+ <div class="caption center"><a href="http://www.fmi.fi/weather/local.html?kunta=Vaasa" target="_blank" rel="noopener">Current weather at Vaasa</a></div>
 </div>
 
 <h2>Some pictures from Vaasa</h2>
