--- a/station.html
+++ b/station.html
@@ -33,14 +33,14 @@ ALAN42 handheld (40CH, AM/FM), Albrecht AE-201S handheld</li>
 <li><b>MFJ-941E</b> antenna tuner</li>
 <li><b>MFJ-1270C</b> TNC</li>
 <li><b>AEA PK-96</b> TNC</li>
-<li><b>T20</b> wire antenna (Wire antenna for 11 meter made in Finland, for info see <a href="http://koti.mbnet.fi/t20aaa/T20TRIP.HTM" target="_blank">T20 Trip antenna</a>)</li>
+<li><b>T20</b> wire antenna (Wire antenna for 11 meter made in Finland, for info see <a href="http://koti.mbnet.fi/t20aaa/T20TRIP.HTM" target="_blank" rel="noopener">T20 Trip antenna</a>)</li>
 </ul>
 
 <div class="overlap-figure">
   <div class="of-container">
     <a href="images/56fl001-antennas-2014.jpg"><img src="images/56fl001-antennas-2014-preview.jpg" alt="My antennas (4 element short boom Yagi and a J-pole vertical)"></a>
     <div class="caption">
-      My antennas: 4 element Yagi and a <a href="http://www.qsl.net/dk7zb/J_Pole/wiremanjpole.htm" title="Wireman J-Pole" target="_blank">J-pole vertical</a> for 11m.
+      My antennas: 4 element Yagi and a <a href="http://www.qsl.net/dk7zb/J_Pole/wiremanjpole.htm" title="Wireman J-Pole" target="_blank" rel="noopener">J-pole vertical</a> for 11m.
     </div>
   </div>
 </div>
@@ -49,7 +49,7 @@ ALAN42 handheld (40CH, AM/FM), Albrecht AE-201S handheld</li>
   <div class="of-container">
     <a href="images/56fl001-antennas-2011.jpg"><img src="images/56fl001-antennas-2011-preview.jpg" alt="My old antennas (T20 for 11m, 40m dipole for HF listening)"></a>
     <div class="caption">
-      My old antennas (2011): <a href="http://koti.mbnet.fi/t20aaa/T20TRIP.HTM" title="T20 Trip antenna" target="_blank">T20 vertical</a> for 11 meters and 40m dipole for HF listening.
+      My old antennas (2011): <a href="http://koti.mbnet.fi/t20aaa/T20TRIP.HTM" title="T20 Trip antenna" target="_blank" rel="noopener">T20 vertical</a> for 11 meters and 40m dipole for HF listening.
     </div>
   </div>
 </div>
