Updated Vaasa logo and more
Updated inhabitant number and language percentages.
Changed the logo to the new Vaasa logo.

--- a/vaasa.html
+++ b/vaasa.html
@@ -45,15 +45,15 @@ title: About my City Vaasa
 <h1>About my City Vaasa</h1>
 
 <p>City of Vaasa is located in the narrowest point of the Gulf of Bothnia.
-Vaasa (The capital of Ostrobothnia) has over 66 000 inhabitants; 70% speak Finnish
-as their mother tongue, 22% speak Swedish and 7% speak other languages.
+Vaasa (The capital of Ostrobothnia) has over 67 000 inhabitants; 69% speak Finnish
+as their mother tongue, 23% speak Swedish and 8% speak other languages.
 </p>
 
-<p style="text-align: center;">
- <img src="images/vaasa_waves_transp.gif" alt="City of Vaasa">
-</p>
+<div class="vaasa-logo">
+ <img src="images/vaasa/vaasa-logo.svg" alt="City of Vaasa">
+</div>
 
-<table id="vsa-area">
+<table class="vaasa-area">
  <caption>Vaasa area</caption>
  <tr><th>Total area</th><td>575&nbsp;sq&nbsp;km</td></tr>
  <tr><td>-land</td><td>364&nbsp;sq&nbsp;km</td></tr>
