Added itemprop="address" to QSL address microdata

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@ function tarkistus() {
 <div id="address">
 	56FL001 QSL &amp; Mailing Address<br>
 	<img src="images/qsl_writing_smaller.jpg" alt="Some QSLs under work">
-	<div itemscope itemtype="http://schema.org/PostalAddress">
+	<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
 	<span itemprop="name">Timo</span><br>
 	P.O.Box <span itemprop="postOfficeBoxNumber">7</span><br>
 	<span itemprop="postalCode">65301</span><br>
