Fixed contact form label placement

--- a/contact.html
+++ b/contact.html
@@ -55,15 +55,18 @@ function tarkistus() {
 <div id="contact-form">
 	<form role="form" action="http://fldx.org/56fl001/FormToEmail.php" method="post" onsubmit="return tarkistus();">
 		<p>
-			<label for="call_name">Callsign/Name</label><br> <input size="30" name="name" id="call_name" type="text" autocorrect="off" autocapitalize="words" required autofocus>
+			<label for="call_name">Callsign/Name</label>
+			<input size="30" name="name" id="call_name" type="text" autocorrect="off" autocapitalize="words" required autofocus>
 		</p>
 
 		<p>
-			<label for="e-mail">E-mail</label><br> <input size="30" name="email" id="e-mail" type="text" autocapitalize="off" autocomplete="off" autocorrect="email" required>
+			<label for="e-mail">E-mail</label>
+			<input size="30" name="email" id="e-mail" type="text" autocapitalize="off" autocomplete="off" autocorrect="email" required>
 		</p>
 
 		<p>
-			<label for="message">Comments</label><br><textarea name="comments" id="message" rows="10" cols="40" required></textarea>
+			<label for="message">Comments</label>
+			<textarea name="comments" id="message" rows="10" cols="40" required></textarea>
 		</p>
 
 		<p>
