Refactored the QRZ11.com search widget code

--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@ window.addEventListener("load",function(){
 DX Group Foxtrot Lima" style="border: 0px;"></a></p>
 </div>
 
-<div class="qrz11search">
+<article class="qrz11search">
 <form method="get" action="//www.qrz11.com/show_prof.php" target="_blank" rel="noopener">
-<table role="presentation">
-<tr><td><a href="http://www.qrz11.com" target="_blank" rel="noopener"><img alt="QRZ11.com" src="images/banners/half-banner-qrz11.gif"></a></td></tr>
-<tr><td><label for="call"><span class="sr-only">Search qrz11.com for </span>Callsign:</label> <input type="text" name="callsign" id="call" size="8"> <input type="submit" value="Search"></td></tr>
-</table>
+<div class="qrz11search-banner"><a href="http://www.qrz11.com" target="_blank" rel="noopener"><img alt="QRZ11.com" src="https://56fl001.fldx.org/images/banners/half-banner-qrz11.gif"></a></div>
+<div class="qrz11search-search"><label for="call"><span class="sr-only">Search qrz11.com for </span>Callsign:</label> <input type="text" name="callsign" id="call" size="8"> <input type="submit" value="Search"></div>
 </form>
-</div>
+</article>
 </section>
 
 <!-- Foxtrot Lima clusterspots.php -->
