Removed and updated links on the links page
Removed links to cluster.dk and thiecom.de/ftp

The link 'Understanding 10 meter Sporadic E' points now to the saved article at web.archive.org

--- a/links.html
+++ b/links.html
@@ -18,7 +18,9 @@ DX Group Foxtrot Lima" /></a>
 
 <ul class="links">
 <li><a href="http://www.alfatango.org" target="_blank" rel="noopener">http://www.alfatango.org</a></li>
+<!-- Closed permanently
 <li><a href="http://www.cluster.dk" target="_blank" rel="noopener">http://www.cluster.dk</a></li>
+-->
 <li><a href="http://www.sugar-delta.org" target="_blank" rel="noopener">http://www.sugar-delta.org</a></li>
 {% comment %}<!-- <a href="http://www.emudx.com" target="_blank" rel="noopener">http://www.emudx.com</a> -->{% endcomment %}
 </ul>
@@ -44,7 +46,7 @@ DX Group Foxtrot Lima" /></a>
 <br>
 <br>
 Understanding 10 meter (also 11 meter) Sporadic E<br>
-<a href="http://www.chem.hawaii.edu/uham/spore.html" target="_blank" rel="noopener">http://www.chem.hawaii.edu/uham/spore.html</a>
+<a href="http://web.archive.org/web/20200218165431/http://www.chem.hawaii.edu/uham/spore.html" target="_blank" rel="noopener">http://www.chem.hawaii.edu/uham/spore.html</a>
 <br>
 <br>
 
@@ -89,7 +91,7 @@ Understanding 10 meter (also 11 meter) Sporadic E<br>
 <li><a href="http://www.mods.dk" target="_blank" rel="noopener">http://www.mods.dk</a></li>
 <li><a href="http://www.radiomods.co.nz/" target="_blank" rel="noopener">http://www.radiomods.co.nz/</a></li>
 <li><a href="http://www.servicedocs.com/" target="_blank" rel="noopener">http://www.servicedocs.com/</a></li>
-<li><a href="http://www.thiecom.de/ftp/" target="_blank" rel="noopener">http://www.thiecom.de/ftp/</a></li>
+<!-- <li><a href="http://www.thiecom.de/ftp/" target="_blank" rel="noopener">http://www.thiecom.de/ftp/</a></li> -->
 </ul>
 
 {% comment %}<!--
