Updated the link to RadioQTH QSL Card Creator
The link to RadioQTH QSL Card Creator points now to the
correct new URL.

--- a/radioqth-qsl-creator.html
+++ b/radioqth-qsl-creator.html
@@ -5,7 +5,7 @@ title: Creating eQSL PDF on radioqth.net
 
 <h1>Creating eQSL PDF on radioqth.net</h1>
 
-<p>You can create printable PDF QSL at <a href="http://radioqth.net/qsl.aspx" title="RadioQTH QSL Card Creator" target="_blank" rel="noopener">http://radioqth.net/qsl.aspx</a><br>
+<p>You can create printable PDF QSL at <a href="http://www.radioqth.net/qslcards" title="RadioQTH QSL Card Creator" target="_blank" rel="noopener">http://www.radioqth.net/qslcards</a><br>
 	Send it via e-mail and the station you worked has a printable eQSL</p>
 
 	<div class="image">
