Fixed links on the downloads page
Removed IonoProbe download link. IonoProbe website says:
IonoProbe 1.41 has been discontinued because NOAA no longer provides
some of the data feeds that were used by IonoProbe.

Updated the link to the Solarcon A99 manual.

Removed links to files on kb2ljj.serveftp.com (the site is gone).

--- a/files.html
+++ b/files.html
@@ -6,27 +6,21 @@ title: Some Radio Related Files
 <h1>Some Radio Related Files</h1>
 
 <p>
-<a href="http://fldx.org/site/downloads/IonoProbe.zip">Ionoprobe 1.39 trial</a> for monitoring space weather (857 kb)<br>
-See: <a href="http://www.dxatlas.com/IonoProbe/" target="_blank" rel="noopener">http://www.dxatlas.com/IonoProbe/</a> for more info.
+<a href="https://tiedostot.cbharraste.eu/Solarcon-A99-manual.pdf">Solarcon A99 Manual</a> (3.53 mb)<br>
+A99 manual from cbharraste.eu (by 56FL114, Pete)<br>
 </p>
-
-<p>
-<a href="http://cbharraste.info/tiedostot/Solarcon-A99-Manual.PDF">Solarcon A99 Manual</a> (3.53 mb)<br>
-A99 manual from cbharraste.info (by 56FL114, Pete)<br>
-</p>
-
 
 <h2>Some collected modifications from mods.dk from the year 2002</h2>
 
 <p>
 <a href="downloads/All_Alinco_Modification_From_Mods_Dk_In_One_File.pdf">All_Alinco_Modification_From_Mods_Dk_In_One_File.pdf</a> (876 kb)<br>
-(Or download the Alinco mods PDF from kb2ljj.com by clicking <a href="http://kb2ljj.serveftp.com/Manuals%20Review/Modification%20Sheet/All%20Alinco%20Modification%20From%20Mods%20Dk%20In%20One%20File.pdf">here</a>.)<br>
+{% comment %}(Or download the Alinco mods PDF from kb2ljj.com by clicking <a href="http://kb2ljj.serveftp.com/Manuals%20Review/Modification%20Sheet/All%20Alinco%20Modification%20From%20Mods%20Dk%20In%20One%20File.pdf">here</a>.)<br>{% endcomment %}
 <a href="downloads/All_ICOM_mods_from_mods_dk_in_ONE_file.pdf">All_ICOM_mods_from_mods_dk_in_ONE_file.pdf</a> (7.44 mb)<br>
-(Or download the ICOM mods PDF from hamradio.online.ru by clicking <a href="http://hamradio.online.ru/ftp3/All_ICOM_mods_from_mods_dk_in_ONE_file.pdf">here</a>.)<br>
+{% comment %}(Or download the ICOM mods PDF from hamradio.online.ru by clicking <a href="http://hamradio.online.ru/ftp3/All_ICOM_mods_from_mods_dk_in_ONE_file.pdf">here</a>.)<br>{% endcomment %}
 <a href="downloads/All_KENWOOD_mods_from_mods_dk_in_ONE_file.pdf">All_KENWOOD_mods_from_mods_dk_in_ONE_file.pdf</a> (10 mb)<br>
-(Or download the Kenwood mods PDF from hamradio.online.ru by clicking <a href="http://hamradio.online.ru/ftp3/All_KENWOOD_mods_from_mods_dk_in_ONE_file.pdf">here</a>.)<br>
+{% comment %}(Or download the Kenwood mods PDF from hamradio.online.ru by clicking <a href="http://hamradio.online.ru/ftp3/All_KENWOOD_mods_from_mods_dk_in_ONE_file.pdf">here</a>.)<br>{% endcomment %}
 <a href="downloads/All_YAESU_mods_from_mods_dk_in_ONE_file.pdf">All_YAESU_mods_from_mods_dk_in_ONE_file.pdf</a> (5.25 mb)<br>
-(Or download the Yaesu mods PDF from hamradio.online.ru by clicking <a href="http://hamradio.online.ru/ftp3/All_YAESU_mods_from_mods_dk_in_ONE_file.pdf">here</a>.)<br>
+{% comment %}(Or download the Yaesu mods PDF from hamradio.online.ru by clicking <a href="http://hamradio.online.ru/ftp3/All_YAESU_mods_from_mods_dk_in_ONE_file.pdf">here</a>.)<br>{% endcomment %}
 </p>
 
 <div>
